--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "colors": "^1.4.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-fileuploader": "^0.0.7",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
-    "nodemon": "^3.1.10"
+    "node-geocoder": "^4.4.1",
+    "nodemon": "^3.1.10",
+    "slugify": "^1.6.6"
   }
 }
